--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^2.4.2",
+    "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.1",
     "nodemon": "^2.0.22",
